Presentación: Arreglo compilación en overelaf

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -6,8 +6,7 @@
   %\useoutertheme{infolines}
   %\usecolortheme[RGB={125,173,51}]{structure}
   % or ...
-
-  \setbeamercovered{transparent}
+  %\setbeamercovered{transparent}
   % or whatever (possibly just delete it)
 }
 
@@ -23,36 +22,30 @@
 \tikzstyle{block}=[draw opacity=0.7,line width=1.4cm]
 
 \usepackage[spanish]{babel}
-\usepackage[latin1]{inputenc}
 
 \usepackage{times}
-% Or whatever. Note that the encoding and the font should match. If T1
-% does not look nice, try deleting the line with the fontenc.
 
+\title[Verificaci√≥n de smart contracts en Marlowe]% (optional, use only with long paper titles)
+{Verificaci√≥n de smart contracts en Marlowe para la blockchain Cardano}
 
-\title[VerificaciÛn de smart contracts en Marlowe]% (optional, use only with long paper titles)
-{VerificaciÛn de smart contracts en Marlowe para la blockchain Cardano}
-
-\author[Juli·n Ferres] % (optional, use only with lots of authors)
-{~Juli·n Ferres}
+\author[Juli√°n Ferres] % (optional, use only with lots of authors)
+{~Juli√°n Ferres}
 % - Give the names in the same order as the appear in the paper.
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
 \institute[FIUBA] % (optional, but mostly needed)
 {
   %\inst{1}
-  Facultad de IngenierÌa, Universidad de Buenos Aires.
+  Facultad de Ingenier√≠a\\Universidad de Buenos Aires.
 }
-%\date[\today] % (optional, should be abbreviation of conference name)
-%{\today}
 \date{\today}
 
-% Ac· se puede insertar el logo de la UBA
- \pgfdeclareimage[height=0.75cm]{university-logo}{images/FIUBA_Logo.png}
- \logo{\pgfuseimage{university-logo}}
+% Ac√° se puede insertar el logo de la UBA
+\pgfdeclareimage[height=0.75cm]{fiuba}{images/FIUBA_Logo.png}
+\logo{\pgfuseimage{fiuba}}
 
 
-% TamaÒo de fuente en la primer p·gina
+% Tama√±o de fuente en la primer p√°gina
 \setbeamerfont{author}{size=\small}
 \setbeamerfont{institute}{size=\scriptsize}
 \setbeamerfont{date}{size=\scriptsize}
@@ -62,7 +55,7 @@
 %\AtBeginSubsection[]
 \AtBeginSection[]
 {
-  \begin{frame}{Õndice de contenidos}
+  \begin{frame}{√çndice de contenidos}
   \footnotesize
 %  \begin{multicols}{2} 
     \tableofcontents[currentsection, currentsubsection]
@@ -88,37 +81,37 @@
 
 \begin{frame} 
 	\footnotesize
-	\frametitle{Contenidos}
+	\frametitle{√çndice de contenidos}
 	%\begin{multicols}{2} 
 	\tableofcontents
 	%\end{multicols}
 \end{frame}
 
 %\begin{frame}
-%    \textbf{Advertencia:} Estas diapos no son autocontenidas. Les faltan todos los dibujos (pizarrÛn), y explicaciones clave.
+%    \textbf{Advertencia:} Estas diapos no son autocontenidas. Les faltan todos los dibujos (pizarr√≥n), y explicaciones clave.
 %\end{frame}
 
-\section{SecciÛn1}
-\begin{frame}{Algun tÌtulo para el frame1}
-	
-	\lipsum[1]
-	
+\section{Secci√≥n1}
+\begin{frame}{Algun t√≠tulo para el frame1}
+
+Hola	
+
 \end{frame}
 
-\section{SecciÛn2}
-\begin{frame}{Algun tÌtulo para el frame2}
+\section{Secci√≥n2}
+\begin{frame}{Alg√∫n t√≠tulo para el frame2}
 	
-	\lipsum[1]
-	
+Gola
+
 \end{frame}
 
 
-\section{BibliografÌa}
+\section{Bibliograf√≠a}
 
-\begin{frame}{BibliografÌa}
+\begin{frame}{Bibliograf√≠a}
 	
 	\begin{itemize}
-		\item BibliografÌa1 % No estoy seguro si es necesario
+		\item Bibliograf√≠a1 % No estoy seguro si es necesario
 	\end{itemize}
 	
 \end{frame}
